--- a/src/main/java/com/mycompany/presupuestoferias/views/SystemView.form
+++ b/src/main/java/com/mycompany/presupuestoferias/views/SystemView.form
@@ -814,6 +814,7 @@
                             <StringItem index="3" value="INVIABLE"/>
                           </StringArray>
                         </Property>
+                        <Property name="enabled" type="boolean" value="false"/>
                       </Properties>
                       <AuxValues>
                         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
